# corvusite-min

./: .gitignore  .gitmodules  Cargo.toml  bacon.toml  build.rs  cloud.yaml  deploy.sh  sync.sh
.github/worflows/: deploy.yaml
.github/workflows/: deploy.yaml
markcomp/: Cargo.toml
markcomp/benches/: bench.rs
markcomp/src/: arena.rs  lib.rs  mdast.rs  pull.rs  visitor.rs
mincomp/: Cargo.toml
mincomp/benches/: bench.rs
mincomp/src/: dom.rs  lib.rs
mincomp/src/dom/: expand.rs  output.rs  tree.rs
phosphor-icons/xtask/src/: update.rs
site/: auto-video.mod.html  button-link.css  button-link.mod.html  image.mod.html  index.css  index.html  link.mod.html  navlink.mod.html  shell-body.mod.html  shell-head.mod.html  shell.css  shell.mod.html
site/about/: index.html
site/blog/: blog-card.mod.html  blog-date.mod.html  blog.css  death.md  dotbreak.css  dotbreak.mod.html  footnote-ref.mod.html  footnote-ret.mod.html  footnote.css  footnotes.mod.html  index.html  mandelbrot.md  site.md
site/blog/components/: blog-description.mod.html  blog-link.mod.html  blog-shell.mod.html  death.css  footnote.css  footnotes.mod.html
site/blog/mandelbrot/: Cargo.toml
site/blog/mandelbrot/src/: lib.rs
site/music/: index.html
src/: gen.rs  lazy_comp.rs  main.rs
test-data/: large.html  markdown.md  small.html  small.md
wincomp/: Cargo.toml
wincomp/benches/: bench.rs
wincomp/src/: element.rs  lib.rs  parse.rs
