[package]
name = "markcomp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_yaml = "0.9"
convert_case = "0.6"
winnow = { version = "0.6", features = ["simd"] }
markdown = "1.0.0-alpha.21"
wincomp = { path = "../wincomp" }
tinyvec = { version = "1.8", features = ["alloc"] }
syntect = "5.2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
