[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
num = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0", features = ["use-std"] }
console_error_panic_hook = { version = "0.1" }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
  'Performance',
  'WorkerOptions',
  'WorkerType',
] }
